feat(pakhet): add screeny service at screeny.unixpimps.net

--- a/secrets/pakhet.yaml
+++ b/secrets/pakhet.yaml
@@ -11,3 +11,9 @@ maxmind_api_key: PLACEHOLDER_MAXMIND_API_KEY
 # SSH private key for borg backup to rsync.net
 backup_ssh_key: |
   PLACEHOLDER_SSH_PRIVATE_KEY
+
+# Screeny JWT secret for token signing (generate with: openssl rand -hex 32)
+screeny_jwt_secret: PLACEHOLDER_SCREENY_JWT_SECRET
+
+# Screeny admin password
+screeny_admin_password: PLACEHOLDER_SCREENY_ADMIN_PASSWORD
