--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
           skipPush: true
 
       - name: Check flake
-        run: nix flake check --no-build
+        run: nix flake show
 
   build-darwin:
     runs-on: macos-latest
